# performance_aware_programming

./: .gitignore  README.md
01_haversine/: .README.md.orig  .envrc  README.md  naive.py  test.sh
01_haversine/gen_haversine_data/: Cargo.toml
01_haversine/gen_haversine_data/src/: main.rs
01_haversine/rust/: Cargo.toml
01_haversine/rust/src/: main.rs
02_json_parsing/: README.md
02_json_parsing/gen_haversine_data/src/: main.rs
02_json_parsing/json_parser/: Cargo.toml
02_json_parsing/json_parser/src/: json.rs  main.rs
03_cpu/front_end_test/: Cargo.toml
03_cpu/front_end_test/src/: lib.rs  main.rs
03_cpu/mov_size_comparison/: Cargo.toml  README.md  data.plot  shell.nix
03_cpu/mov_size_comparison/data/: read_16_diffreg  read_16_samereg  read_32_diffreg  read_32_samereg  read_4_samereg  read_64_diffreg  read_64_samereg  read_8_samereg
03_cpu/mov_size_comparison/src/: lib.rs  main.rs  test.rs
03_cpu/rat_homework/: challenge.md  homework.md
04_math_functions/: flake.nix
04_math_functions/compare_math_funcs/: Cargo.toml
04_math_functions/compare_math_funcs/src/: main.rs
emu8086/: Cargo.toml  Makefile  README.md  build.rs  test.sh
emu8086/cpu8086/: Cargo.toml
emu8086/cpu8086/src/: const_checks.rs  decoder.rs  decoder_with_table.rs  emu.rs  flags.rs  instruction.rs  instruction_table.rs  lib.rs  memory.rs  memory_operand.rs  register.rs
emu8086/emu/: Cargo.toml
emu8086/emu/src/: lib.rs
emu8086/jit/: Cargo.toml
emu8086/jit/src/: evex.rs  il.rs  lib.rs  utils.rs
emu8086/jit_emu/: Cargo.toml
emu8086/src/: decoder.rs  instruction.rs  main.rs  memory.rs  register.rs
emu8086/tests/: listing_37.asm
