[package]
name = "emu8086"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
sys-info = "0.9.1"
thiserror = "1.0.38"
jit_emu = { version = "0.1.0", path = "jit_emu" }
jit = { version = "0.1.0", path = "jit" }
cpu8086 = { version = "0.1.0", path = "cpu8086" }

[build-dependencies]
cpu8086 = { version = "0.1.0", path = "cpu8086" }
jit_emu = { version = "0.1.0", path = "jit_emu" }
jit = { version = "0.1.0", path = "jit" }

[features]
default = []
vecemu = []
