[package]
name = "mov_size_comparison"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
# timeloop = { git = "https://github.com/ctfhacker/timeloop", version = "0.1.0" }
timeloop = { path = "/home/user/workspace/timeloop" }
